feat: ultimos ajustes